--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,8 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
+    workking_directory: ~/AdvancedPeripherals
+
     environment:
       # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
