--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    workking_directory: AdvancedPeripherals
+    workking_directory: .
 
     environment:
       # Customize the JVM maximum heap limit
