--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,11 +1,11 @@
 modLoader="javafml"
-loaderVersion="[35,34)"
+loaderVersion="[34,)"
 license="All rights reserved"
 issueTrackerURL="http://my.issue.tracker/"
 [[mods]]
 modId="advancedperipherals"
 version="0.1"
-displayName="Advanced Peripherals" #
+displayName="Advanced Peripherals"
 #updateJSONURL="http://myurl.me/"
 displayURL="https://srendi.de/"
 #logoFile="examplemod.png"
@@ -13,10 +13,10 @@ authors="Sr_endi"
 description='''
 Advanced Peripherals adds' a lot of new features for Computercraft.
 '''
-[[dependencies.advancedperipherals]] #optional
+[[dependencies.advancedperipherals]]
     modId="forge"
     mandatory=true
-    versionRange="[35,34)"
+    versionRange="[34,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.advancedperipherals]]
