--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,9 +26,9 @@ jobs:
             - v1-dependencies-{{ checksum "build.gradle" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-
+      
+      - run: chmod 777 ./gradlew
       - run: ./gradlew dependencies
-      - run: chmod 777 gradlew
 
       - save_cache:
           paths:
