Added variables to gradle.properties

--- a/build.gradle
+++ b/build.gradle
@@ -76,11 +76,10 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 dependencies {
-    implementation 'org.jetbrains:annotations:20.1.0'
 
-    minecraft 'net.minecraftforge:forge:1.16.4-35.0.18'
+    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
-    implementation fg.deobf("org.squiddev:cc-tweaked-1.16.4:1.94.0")
+    compileOnly fg.deobf("org.squiddev:cc-tweaked-${minecraft_version}:${cc_version}")
 }
 
 repositories {
