--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,8 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.logging.level=debug
+
+minecraft_version= 1.16.4
+forge_version= 35.0.18
+
+cc_version=1.94.0
