--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,8 @@ org.gradle.daemon=false
 org.gradle.logging.level=debug
 
 minecraft_version= 1.16.4
-forge_version= 35.0.18
+forge_version= 35.1.0
+
+jb_annotations=20.1.0
 
 cc_version=1.94.0
