CC works now, i only need to add methods and events to the block.

--- a/build.gradle
+++ b/build.gradle
@@ -84,7 +84,8 @@ dependencies {
 
 repositories {
 
-    maven { url = 'https://squiddev.cc/maven/' }
+    maven { url 'https://squiddev.cc/maven/' }
+    maven { url 'https://modmaven.dev/' }
 
 }
 
