--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,10 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.logging.level=debug
 
-minecraft_version= 1.16.4
-forge_version= 35.1.13
+minecraft_version=1.16.4
+forge_version=35.1.11
+loader_version=[35,)
+mod_version=0.1b
 
 jb_annotations=20.1.0
 
