--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,14 @@ minecraft {
 
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
+repositories {
+
+    maven { url 'https://squiddev.cc/maven/' }
+    maven { url 'https://modmaven.dev/' }
+    maven { url 'https://dvs1.progwml6.com/files/maven/' }
+
+}
+
 dependencies {
 
     compileOnly "org.jetbrains:annotations:${jb_annotations}"
@@ -82,14 +90,7 @@ dependencies {
     runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}:7.6.0.62")
 
     implementation fg.deobf("org.squiddev:cc-tweaked-${minecraft_version}:${cc_version}")
-}
-
-repositories {
-
-    maven { url 'https://squiddev.cc/maven/' }
-    maven { url 'https://modmaven.dev/' }
-    maven { url 'https://dvs1.progwml6.com/files/maven/' }
-
+    //compileOnly fg.deobf("appeng:appliedenergistics2:${appliedenergistics_version}:api");
 }
 
 jar {
