--- a/gradle.properties
+++ b/gradle.properties
@@ -5,9 +5,11 @@ org.gradle.daemon=false
 org.gradle.logging.level=debug
 
 minecraft_version=1.16.4
-forge_version=35.1.11
+forge_version=35.1.20
 mod_version=0.2.2b
 
 jb_annotations=20.1.0
 
 cc_version=1.94.0
+#I will add an block with AE2 in the near future
+appliedenergistics_version=8.2.0-beta.1
