--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -31,3 +31,10 @@ mandatory = true
 versionRange = "1.94.0"
 ordering = "NONE"
 side = "BOTH"
+[[dependencies.advancedperipherals]]
+modId = "appliedenergistics2"
+mandatory = false
+versionRange = "8.2.0-beta.1"
+ordnering = "NONE"
+side = "BOTH"
+
