--- a/build.gradle
+++ b/build.gradle
@@ -79,7 +79,7 @@ repositories {
     maven { url 'https://squiddev.cc/maven/' }
     maven { url 'https://modmaven.dev/' }
     maven { url 'https://dvs1.progwml6.com/files/maven/' }
-
+    maven { url 'https://repo.refinedmods.com/'}
 }
 
 dependencies {
@@ -91,6 +91,8 @@ dependencies {
     runtimeOnly fg.deobf("mezz.jei:jei-1.16.4:7.6.0.62")
 
     implementation fg.deobf("org.squiddev:cc-tweaked-1.16.4:${cc_version}")
+    compileOnly fg.deobf("com.refinedmods:refinedstorage:${rs_version}")
+    runtimeOnly fg.deobf("com.refinedmods:refinedstorage:${rs_version}")
     compileOnly fg.deobf("appeng:appliedenergistics2:${appliedenergistics_version}:api");
     runtimeOnly fg.deobf("appeng:appliedenergistics2:${appliedenergistics_version}");
 }
