--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -37,4 +37,9 @@ mandatory = false
 versionRange = "8.2.0-beta.2"
 ordnering = "NONE"
 side = "BOTH"
-
+[[dependencies.advancedperipherals]]
+modId = "refinedstorage"
+mandatory = false
+versionRange = "[1.9.10,)"
+ordnering = "NONE"
+side = "BOTH"
