--- a/build.gradle
+++ b/build.gradle
@@ -92,9 +92,13 @@ dependencies {
 
     implementation fg.deobf("org.squiddev:cc-tweaked-1.16.4:${cc_version}")
     compileOnly fg.deobf("com.refinedmods:refinedstorage:${rs_version}")
-    //runtimeOnly fg.deobf("com.refinedmods:refinedstorage:${rs_version}")
+    runtimeOnly fg.deobf("com.refinedmods:refinedstorage:${rs_version}")
     compileOnly fg.deobf("appeng:appliedenergistics2:${appliedenergistics_version}:api");
     runtimeOnly fg.deobf("appeng:appliedenergistics2:${appliedenergistics_version}");
+
+    //Mods to test stuff(Not required mods)
+    runtimeOnly fg.deobf("mekanism:Mekanism:1.16.4-10.0.19.446")
+    runtimeOnly fg.deobf("mekanism:Mekanism:1.16.4-10.0.19.446:generators")
 }
 
 jar {
