Added a debug mode and changed how we handle the configuration of our blocks.

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,15 @@ minecraft {
                     source sourceSets.main
                 }
             }
+            if (project.hasProperty('mc_uuid')) {
+                args '--uuid', project.getProperty('mc_uuid')
+            }
+            if (project.hasProperty('mc_username')) {
+                args '--username', project.getProperty('mc_username')
+            }
+            if (project.hasProperty('mc_accessToken')) {
+                args '--accessToken', project.getProperty('mc_accessToken')
+            }
         }
 
         server {
@@ -69,6 +78,7 @@ minecraft {
                 }
             }
         }
+
     }
 }
 
