--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -35,7 +35,7 @@ side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "appliedenergistics2"
 mandatory = false
-versionRange = "8.2.0-beta.2"
+versionRange = "8.2.0"
 ordnering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
