--- a/build.gradle
+++ b/build.gradle
@@ -104,6 +104,7 @@ dependencies {
     compileOnly fg.deobf("appeng:appliedenergistics2:${ae_version}:api");
     runtimeOnly fg.deobf("appeng:appliedenergistics2:${ae_version}");
 
+    runtimeOnly fg.deobf("mcjty.theoneprobe:TheOneProbe-1.16:${top_version}")
     //Mods to test stuff(Not required mods)
     runtimeOnly fg.deobf("mekanism:Mekanism:1.16.4-10.0.19.446")
     runtimeOnly fg.deobf("mekanism:Mekanism:1.16.4-10.0.19.446:generators")
