--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,10 @@ org.gradle.daemon=false
 org.gradle.logging.level=debug
 minecraft_version=1.16.5
 forge_version=36.0.21
-mod_version=0.4.4b
+mod_version=0.4.5-DEV2b
 jb_annotations=20.1.0
 rs_version=1.9.12+151
 cc_version=1.95.2
 ae_version=8.2.0
 mappings_version=20210309-1.16.5
+top_version=1.16-3.0.6-8
