Fixed wrong curios version in mods.toml

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -37,7 +37,7 @@ side = "BOTH"
 [[dependencies.advancedperipherals]]
 modId = "curios"
 mandatory = true
-versionRange = "[4.0.5.1,)"
+versionRange = "[1.16.5-4.0.5.1,)"
 ordering = "NONE"
 side = "BOTH"
 [[dependencies.advancedperipherals]]
