--- a/build.gradle
+++ b/build.gradle
@@ -123,11 +123,11 @@ jar {
     manifest {
         attributes([
                 "Specification-Title"     : "advancedperipherals",
-                "Specification-Vendor"    : "Sr_endi",
+                "Specification-Vendor"    : "Srendi",
                 "Specification-Version"   : "${version}",
                 "Implementation-Title"    : "advancedperipherals",
                 "Implementation-Version"  : "${version}",
-                "Implementation-Vendor"   : "Sr_endi",
+                "Implementation-Vendor"   : "Srendi",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
