[29]Added Immersive Engineering integration

--- a/build.gradle
+++ b/build.gradle
@@ -99,6 +99,8 @@ repositories {
     maven { url 'https://repo.refinedmods.com/' }
     maven { url 'https://maven.theillusivec4.top/' }
     maven { url 'https://maven.blamejared.com' }
+    maven { url "https://www.cursemaven.com" }
+
 }
 
 dependencies {
@@ -122,6 +124,8 @@ dependencies {
 
     implementation fg.deobf("mekanism:Mekanism:${mekanism_version}")
     implementation fg.deobf("mekanism:Mekanism:${mekanism_version}:generators")
+
+    implementation fg.deobf("curse.maven:ie-231951:3233018")
 
     //Mods to test stuff(Not required mods)
     //runtimeOnly fg.deobf("mcjty.theoneprobe:TheOneProbe-1.16:${top_version}")
