--- a/build.gradle
+++ b/build.gradle
@@ -100,6 +100,7 @@ repositories {
     maven { url 'https://maven.theillusivec4.top/' }
     maven { url 'https://maven.blamejared.com' }
     maven { url "https://www.cursemaven.com" }
+    maven { url 'https://maven.blamejared.com' }
 
 }
 
@@ -113,6 +114,7 @@ dependencies {
 
     implementation fg.deobf("vazkii.botania:Botania:${botania_version}")
     //Botania needs patchouli to run
+    compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
     runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
 
     implementation fg.deobf("com.refinedmods:refinedstorage:${rs_version}")
