Added MineColonies integration

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,18 @@ org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 org.gradle.logging.level=debug
 minecraft_version=1.16.5
-forge_version=36.0.46
+forge_version=36.1.32
 mod_version=0.7-DEV
 jb_annotations=20.1.0
 rs_version=1.9.12+157
 cc_version=1.96.0
 ae_version=8.2.0
-mappings_version=20210309-1.16.5
 top_version=1.16-3.0.6-8
 curios_version=1.16.5-4.0.5.1
 botania_version=1.16.5-416
 patchouli_version=1.16.4-51
 mekanism_version=1.16.5-10.0.21.448
+#colony_version=0.14.224-BETA
+#structurize_version=0.13.171-ALPHA
+colony_version=0.14.238-BETA
+structurize_version=0.13.195-ALPHA
