Cleanup gradle.properties and build.gradle a little bit

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.0.16', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.0.20', changing: true
         classpath 'com.android.tools.build:gradle:2.3.0'
     }
 }
@@ -28,7 +28,7 @@ archivesBaseName = 'advancedperipherals'
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
 
-    mappings channel: 'official', version: '1.16.5'
+    mappings channel: "${mappings_channel}", version: "${mappings_version}"
 
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
@@ -112,41 +112,57 @@ repositories {
 }
 
 dependencies {
-
-    implementation fg.deobf("com.minecolonies:minecolonies:${colony_version}:universal")
-    implementation fg.deobf("com.ldtteam:structurize:${structurize_version}:universal")
+    //We seperate these dependencies to prevent issues with versions
+    //TODO: We need a better way to do this
 
     compileOnly "org.jetbrains:annotations:${jb_annotations}"
 
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
-    implementation fg.deobf("org.squiddev:cc-tweaked-1.16.4:${cc_version}")
+    compileOnly fg.deobf("org.squiddev:cc-tweaked-${cc_version}")
+
+    compileOnly fg.deobf("com.minecolonies:minecolonies:${colony_version}:universal")
+    compileOnly fg.deobf("com.ldtteam:structurize:${structurize_version}:universal")
+
+    compileOnly fg.deobf("com.refinedmods:refinedstorage:${rs_version}")
 
     compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}")
     //Botania needs patchouli to run
     compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
-    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
 
-    implementation fg.deobf("com.refinedmods:refinedstorage:${rs_version}")
+    compileOnly fg.deobf("appeng:appliedenergistics2:${ae_version}");
 
-    implementation fg.deobf("appeng:appliedenergistics2:${ae_version}");
-
-    implementation fg.deobf("curse.maven:id-236307:3365631")
-    implementation fg.deobf("curse.maven:CommonCapabilites-247007:3292062")
-    implementation fg.deobf("curse.maven:CyclopsCore-232758:3336467")
-
-    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
     compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}:api")
 
-    implementation fg.deobf("mekanism:Mekanism:${mekanism_version}")
-    implementation fg.deobf("mekanism:Mekanism:${mekanism_version}:generators")
+    compileOnly fg.deobf("curse.maven:id-${integrated_dynamics_version}")
+    compileOnly fg.deobf("curse.maven:CommonCapabilites-${common_capabilities_version}")
+    compileOnly fg.deobf("curse.maven:CyclopsCore-${cyclops_core_version}")
 
-    //Immersive Engineering
-    compileOnly fg.deobf("curse.maven:ie-231951:3233018")
+    compileOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
+    compileOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:generators")
+
+    compileOnly fg.deobf("curse.maven:immersiveengineering-${immersive_engineering_version}")
+
+    runtimeOnly fg.deobf("org.squiddev:cc-tweaked-${cc_version}")
+
+    runtimeOnly fg.deobf("com.refinedmods:refinedstorage:${rs_version}")
+
+    runtimeOnly fg.deobf("appeng:appliedenergistics2:${ae_version}");
+
+    runtimeOnly fg.deobf("curse.maven:integrateddynamics-${integrated_dynamics_version}")
+    runtimeOnly fg.deobf("curse.maven:commoncapabilities-${common_capabilities_version}")
+    runtimeOnly fg.deobf("curse.maven:cyclopscore-${cyclops_core_version}")
+
+    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
+
+    runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
+    runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:generators")
+
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
 
     //Mods to test stuff(Not required mods)
-    //runtimeOnly fg.deobf("mcjty.theoneprobe:TheOneProbe-1.16:${top_version}")
-    runtimeOnly fg.deobf("mezz.jei:jei-1.16.4:7.6.1.71")
+    runtimeOnly fg.deobf("mcjty.theoneprobe:TheOneProbe-1.16:${top_version}")
+    runtimeOnly fg.deobf("mezz.jei:jei-${jei_version}")
 
 }
 
