--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
+apply plugin: 'java-library'
 
 apply plugin: 'net.minecraftforge.gradle'
 
@@ -112,56 +113,40 @@ repositories {
 }
 
 dependencies {
-    //We seperate these dependencies to prevent issues with versions
-    //TODO: We need a better way to do this
+
+    implementation fg.deobf("com.minecolonies:minecolonies:${minecolonies_version}:universal")
+    implementation fg.deobf("com.ldtteam:structurize:${structurize_version}:universal")
 
     compileOnly "org.jetbrains:annotations:${jb_annotations}"
 
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
-    compileOnly fg.deobf("org.squiddev:cc-tweaked-${cc_version}")
-
-    compileOnly fg.deobf("com.minecolonies:minecolonies:${colony_version}:universal")
-    compileOnly fg.deobf("com.ldtteam:structurize:${structurize_version}:universal")
-
-    compileOnly fg.deobf("com.refinedmods:refinedstorage:${rs_version}")
+    implementation fg.deobf("org.squiddev:cc-tweaked-${cc_version}")
 
     compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}")
     //Botania needs patchouli to run
     compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
-
-    compileOnly fg.deobf("appeng:appliedenergistics2:${ae_version}");
-
-    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}:api")
-
-    compileOnly fg.deobf("curse.maven:id-${integrated_dynamics_version}")
-    compileOnly fg.deobf("curse.maven:CommonCapabilites-${common_capabilities_version}")
-    compileOnly fg.deobf("curse.maven:CyclopsCore-${cyclops_core_version}")
-
-    compileOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
-    compileOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:generators")
-
-    compileOnly fg.deobf("curse.maven:immersiveengineering-${immersive_engineering_version}")
-
-    runtimeOnly fg.deobf("org.squiddev:cc-tweaked-${cc_version}")
-
-    runtimeOnly fg.deobf("com.refinedmods:refinedstorage:${rs_version}")
-
-    runtimeOnly fg.deobf("appeng:appliedenergistics2:${ae_version}");
-
-    runtimeOnly fg.deobf("curse.maven:integrateddynamics-${integrated_dynamics_version}")
-    runtimeOnly fg.deobf("curse.maven:commoncapabilities-${common_capabilities_version}")
-    runtimeOnly fg.deobf("curse.maven:cyclopscore-${cyclops_core_version}")
-
-    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
-
-    runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
-    runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:generators")
-
     runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
 
+    implementation fg.deobf("com.refinedmods:refinedstorage:${rs_version}")
+
+    implementation fg.deobf("appeng:appliedenergistics2:${ae_version}");
+
+    implementation fg.deobf("curse.maven:integrateddynamics-${integrated_dynamics_version}")
+    implementation fg.deobf("curse.maven:CommonCapabilites-${common_capabilities_version}")
+    implementation fg.deobf("curse.maven:CyclopsCore-${cyclops_core_version}")
+
+    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
+    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}:api")
+
+    implementation fg.deobf("mekanism:Mekanism:${mekanism_version}")
+    implementation fg.deobf("mekanism:Mekanism:${mekanism_version}:generators")
+
+    //Immersive Engineering
+    compileOnly fg.deobf("curse.maven:immersiveengineering-${immersive_engineering_version}")
+
     //Mods to test stuff(Not required mods)
-    runtimeOnly fg.deobf("mcjty.theoneprobe:TheOneProbe-1.16:${top_version}")
+    //runtimeOnly fg.deobf("mcjty.theoneprobe:TheOneProbe-1.16:${top_version}")
     runtimeOnly fg.deobf("mezz.jei:jei-${jei_version}")
 
 }
