--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,7 @@ integrated_dynamics_version=236307:3365631
 common_capabilities_version=247007:3292062
 cyclops_core_version=232758:3336467
 immersive_engineering_version=231951:3233018
+storagedrawers_version=223852:3180569
 #Mod dependencies for testing stuff(Only used in the dev environment)
 patchouli_version=1.16.4-51
 top_version=1.16-3.0.6-8
