--- a/build.gradle
+++ b/build.gradle
@@ -113,42 +113,50 @@ repositories {
 }
 
 dependencies {
-
-    implementation fg.deobf("com.minecolonies:minecolonies:${minecolonies_version}:universal")
-    implementation fg.deobf("com.ldtteam:structurize:${structurize_version}:universal")
-
+    // Minimal requirements
     compileOnly "org.jetbrains:annotations:${jb_annotations}"
-
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
-
     implementation fg.deobf("org.squiddev:cc-tweaked-${cc_version}")
-
-    compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}")
-    //Botania needs patchouli to run
+    // Compile-time API required
     compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
+    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}:api")
+    // Minimal requirements end
+
+    // Extended requirements
+    // Curios
+    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
+    // Patchouli
     runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
 
-    implementation fg.deobf("com.refinedmods:refinedstorage:${rs_version}")
+    // Minecolonies
+    compileOnly fg.deobf("com.minecolonies:minecolonies:${minecolonies_version}:universal")
+    compileOnly fg.deobf("com.ldtteam:structurize:${structurize_version}:universal")
 
-    implementation fg.deobf("appeng:appliedenergistics2:${ae_version}");
+    // Botania with deps
+    compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}")
 
-    implementation fg.deobf("curse.maven:integrateddynamics-${integrated_dynamics_version}")
-    implementation fg.deobf("curse.maven:CommonCapabilites-${common_capabilities_version}")
-    implementation fg.deobf("curse.maven:CyclopsCore-${cyclops_core_version}")
+    // Refined storage
+    compileOnly fg.deobf("com.refinedmods:refinedstorage:${rs_version}")
 
-    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
-    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}:api")
+    // AE2
+    compileOnly fg.deobf("appeng:appliedenergistics2:${ae_version}");
 
-    implementation fg.deobf("mekanism:Mekanism:${mekanism_version}")
-    implementation fg.deobf("mekanism:Mekanism:${mekanism_version}:generators")
+    // Integrated dynamics
+    compileOnly fg.deobf("curse.maven:integrateddynamics-${integrated_dynamics_version}")
+    compileOnly fg.deobf("curse.maven:CommonCapabilites-${common_capabilities_version}")
+    compileOnly fg.deobf("curse.maven:CyclopsCore-${cyclops_core_version}")
 
-    //Immersive Engineering
+    // Mekanism with addons
+    compileOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
+    compileOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:generators")
+
+    // Immersive Engineering
     compileOnly fg.deobf("curse.maven:immersiveengineering-${immersive_engineering_version}")
 
     // Storage Drawers
-    implementation fg.deobf("curse.maven:storagedrawers-${storagedrawers_version}")
+    compileOnly fg.deobf("curse.maven:storagedrawers-${storagedrawers_version}")
 
-    //Mods to test stuff(Not required mods)
+    // Testing stuff
     runtimeOnly fg.deobf("mcjty.theoneprobe:TheOneProbe-1.16:${top_version}")
     runtimeOnly fg.deobf("mezz.jei:jei-${jei_version}")
 
