--- a/build.gradle
+++ b/build.gradle
@@ -128,18 +128,18 @@ dependencies {
     // Patchouli
     runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
 
+    // Required for successful data generation
+    // Refined Storage
+    implementation fg.deobf("com.refinedmods:refinedstorage:${rs_version}")
+    // AE2
+    implementation fg.deobf("appeng:appliedenergistics2:${ae_version}");
+
     // Minecolonies
     compileOnly fg.deobf("com.minecolonies:minecolonies:${minecolonies_version}:universal")
     compileOnly fg.deobf("com.ldtteam:structurize:${structurize_version}:universal")
 
     // Botania with deps
     compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}")
-
-    // Refined storage
-    compileOnly fg.deobf("com.refinedmods:refinedstorage:${rs_version}")
-
-    // AE2
-    compileOnly fg.deobf("appeng:appliedenergistics2:${ae_version}");
 
     // Integrated dynamics
     compileOnly fg.deobf("curse.maven:integrateddynamics-${integrated_dynamics_version}")
@@ -157,8 +157,9 @@ dependencies {
     compileOnly fg.deobf("curse.maven:storagedrawers-${storagedrawers_version}")
 
     // Testing stuff
-    runtimeOnly fg.deobf("mcjty.theoneprobe:TheOneProbe-1.16:${top_version}")
+//    runtimeOnly fg.deobf("mcjty.theoneprobe:TheOneProbe-1.16:${top_version}")
     runtimeOnly fg.deobf("mezz.jei:jei-${jei_version}")
+//    runtimeOnly fg.deobf("curse.maven:betteradvancements-${betteradvancements_version}")
 
 }
 
