--- a/build.gradle
+++ b/build.gradle
@@ -137,6 +137,8 @@ dependencies {
     compileOnly fg.deobf("com.minecolonies:minecolonies:${minecolonies_version}:universal")
     compileOnly fg.deobf("com.ldtteam:structurize:${structurize_version}:universal")
 
+    runtimeOnly fg.deobf("com.minecolonies:minecolonies:${minecolonies_version}:universal")
+    runtimeOnly fg.deobf("com.ldtteam:structurize:${structurize_version}:universal")
     // Botania with deps
     compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}")
 
@@ -145,6 +147,9 @@ dependencies {
     compileOnly fg.deobf("curse.maven:CommonCapabilites-${common_capabilities_version}")
     compileOnly fg.deobf("curse.maven:CyclopsCore-${cyclops_core_version}")
 
+    runtimeOnly fg.deobf("curse.maven:integrateddynamics-${integrated_dynamics_version}")
+    runtimeOnly fg.deobf("curse.maven:CommonCapabilites-${common_capabilities_version}")
+    runtimeOnly fg.deobf("curse.maven:CyclopsCore-${cyclops_core_version}")
     // Mekanism with addons
     compileOnly fg.deobf("mekanism:Mekanism:${mekanism_version}")
     compileOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:generators")
@@ -158,6 +163,7 @@ dependencies {
     // Storage Drawers
     compileOnly fg.deobf("curse.maven:storagedrawers-${storagedrawers_version}")
 
+    runtimeOnly fg.deobf("curse.maven:storagedrawers-${storagedrawers_version}")
     // Testing stuff
 //    runtimeOnly fg.deobf("mcjty.theoneprobe:TheOneProbe-1.16:${top_version}")
     runtimeOnly fg.deobf("mezz.jei:jei-${jei_version}")
