--- a/gradle.properties
+++ b/gradle.properties
@@ -1,30 +1,31 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 org.gradle.logging.level=debug
+
 #Minecraft related
 minecraft_version=1.16.5
-forge_version=36.1.58
+forge_version=36.2.0
 mod_version=0.7-DEV
 mappings_channel=official
 mappings_version=1.16.5
 jb_annotations=21.0.1
+
 #Mod dependencies
 rs_version=1.9.12+157
 cc_version=1.16.5:1.97.0
-ae_version=8.2.0
-curios_version=1.16.5-4.0.5.1
-botania_version=1.16.5-416
+ae_version=8.4.0
+curios_version=1.16.5-4.0.5.2
+botania_version=1.16.5-419
 mekanism_version=1.16.5-10.0.21.448
-#colony_version=0.14.224-BETA
-#structurize_version=0.13.171-ALPHA
-minecolonies_version=0.14.251-ALPHA
-structurize_version=0.13.195-ALPHA
-integrated_dynamics_version=236307:3365631
+minecolonies_version=0.14.308-ALPHA
+structurize_version=0.13.200-BETA
+integrated_dynamics_version=236307:3376007
 common_capabilities_version=247007:3292062
 cyclops_core_version=232758:3336467
-immersive_engineering_version=231951:3233018
+immersive_engineering_version=231951:3377691
 storagedrawers_version=223852:3180569
+
 #Mod dependencies for testing stuff(Only used in the dev environment)
 patchouli_version=1.16.4-51
 top_version=1.16-3.0.6-8
-jei_version=1.16.4:7.6.1.71
+jei_version=1.16.5:7.7.0.98
