--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run: chmod 777 ./gradlew
+      - run: chmod +x ./gradlew
       - run: ./gradlew dependencies
 
       - save_cache:
