--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@ org.gradle.daemon=false
 org.gradle.logging.level=debug
 
 #Minecraft related
-minecraft_version=1.16.5
-forge_version=36.2.0
-mod_version=0.7-DEV
+minecraft_version=1.17.1
+forge_version=37.0.12
+mod_version=0.8-Dev
 mappings_channel=official
-mappings_version=1.16.5
+mappings_version=1.17.1
 jb_annotations=21.0.1
 
 #Mod dependencies
