--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ version = "${mod_version}"
 group = 'de.srendi.advancedperipherals'
 archivesBaseName = 'advancedperipherals'
 
+java.toolchain.languageVersion = JavaLanguageVersion.of(16)
+
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
 
@@ -107,9 +109,7 @@ repositories {
     maven { url 'https://maven.theillusivec4.top/' }
     maven { url 'https://maven.blamejared.com' }
     maven { url 'https://www.cursemaven.com' }
-    maven {
-        url 'https://ldtteam.jfrog.io/ldtteam/modding'
-    }
+    maven { url 'https://ldtteam.jfrog.io/ldtteam/modding' }
 }
 
 dependencies {
